-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
wirecheck no longer builds:
eaujames@dev:~/lustre-release/lustre/utils$ make wirecheck [498/498]
gcc -DHAVE_CONFIG_H -I. -I../.. -DCC="\"gcc\"" -include /home/eaujames/lustre-release/undef.h -include /home/eaujames/lustre-release/config.h -I/home/eaujames/lustre-release/lnet/include/uapi -I/home/eaujames/l
ustre-release/lustre/include/uapi -I/home/eaujames/lustre-release/libcfs/include -I/home/eaujames/lustre-release/lnet/utils/ -I/home/eaujames/lustre-release/lustre/include -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOU
RCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Wall -Werror -MT wirecheck-wirecheck.o -MD -MP -MF .deps/wirecheck-wirecheck.Tpo -c -o wirecheck-wirecheck.o `test -f 'wirecheck.c' || echo './'`wirecheck.
c
wirecheck.c: In function ‘check_lov_foreign_md’:
wirecheck.c:881:16: error: ‘LU_FOREIGN_TYPE_DAOS’ undeclared (first use in this function)
CHECK_VALUE_X(LU_FOREIGN_TYPE_DAOS);
^
wirecheck.c:104:36: note: in definition of macro ‘CHECK_VALUE_X’
" (unsigned)"#a");\n", (unsigned)a); \
^
wirecheck.c:881:16: note: each undeclared identifier is reported only once for each function it appears in
CHECK_VALUE_X(LU_FOREIGN_TYPE_DAOS);
^
wirecheck.c:104:36: note: in definition of macro ‘CHECK_VALUE_X’
" (unsigned)"#a");\n", (unsigned)a); \
^
wirecheck.c: In function ‘check_lov_hsm_base’:
wirecheck.c:891:2: error: implicit declaration of function ‘BLANK_LINKE’ [-Werror=implicit-function-declaration]
BLANK_LINKE();
^
wirecheck.c: In function ‘check_rsi_downcall_data’:
wirecheck.c:169:27: error: invalid application of ‘sizeof’ to incomplete type ‘struct rsi_downcall_data’
CHECK_VALUE((int)sizeof(struct s)); \
....