LU-17438 utils: fix build for wirecheck

Fix wirecheck compilation and regenerate wiretest files.

Fixes: 6a20bdc ("LU-11376 lov: new foreign LOV format")
Fixes: 15d44e7 ("LU-12682 llite: fake symlink type of foreign file/dir")
Fixes: aebb405 ("LU-10499 pcc: use foreign layout for PCCRO on server side")
Fixes: 0ea23e0 ("LU-13307 nodemap: have nodemap_add_member support large NIDs")
Test-Parameters: trivial testlist=sanity env=ONLY=58
Signed-off-by: Etienne AUJAMES <eaujames@ddn.com>
Change-Id: I3a312136da00ba726887660575f6558faf167241
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53716
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>