lustre/ptlrpc/wirehdr.c
@@ -43,4 +43,6 @@
 #include <uapi/linux/lustre/lustre_access_log.h>
 #include <uapi/linux/lustre/lustre_lfsck_user.h>
 #include <uapi/linux/lustre/lustre_cfg.h>
+#include <uapi/linux/lustre/lgss.h>
 
+#include "ptlrpc_internal.h"
